trying to make sure the fall graphic covers all in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ annc3 p{
      height:100%;
      background-image: url(https://hd.unsplash.com/photo-1429198739803-7db875882052);
      background-size: cover;
-     background-position: bottom;
+/*     background-position: bottom;*/
      background-repeat: no-repeat;
      overflow: hidden;
 }
